--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
-
+.color-white{
+ color: white;
+}
 *{
  background-color: #0E0E0E;
 }
@@ -13,9 +15,9 @@ body{
  border: 2px solid red;
  height: 100vh;
  margin: 0;
- display: flex;
+ /* display: flex;
  flex-direction: column;
- align-items: center;
+ align-items: center; */
 }
 
 .header{
