--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
+
+/* --------------- HEADER ------------------ */
 .color-white{
- color: white;
+ color: #fff;
 }
 *{
  background-color: #0E0E0E;
@@ -12,16 +14,17 @@
 }
 body{
  font-family: 'Roboto', sans-serif;
- border: 2px solid red;
+ border: 3px solid red;
  height: 100vh;
  margin: 0;
  /* display: flex;
  flex-direction: column;
- align-items: center; */
+ flex: 1; */
+ /* align-items: center; */
 }
 
 .header{
- border: 2px solid blue;
+ border: 5px solid blue;
  height: 550px;
  background-color: #1f2937;
  width: 1450px;
@@ -94,4 +97,54 @@ a{
 
 .child-content{
  margin-top: 80px;
+}
+
+/* --------------- Section_1 ------------------ */
+
+.section-1 {
+ height:450px;
+ background-color: #fff;
+ width: 1450px;
+ /* padding: 16px 180px 16px 180px; */
+ box-sizing: border-box;
+ border: 5px solid green;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.info-header-text{
+ margin-top: 50px;
+ background-color: #fff;
+ font-size: 36px;
+ font-weight: 700;
+ display: flex;
+ /* justify-content: center; */
+}
+
+.cards{
+ background-color: #fff;
+ display: flex;
+ gap: 36px;
+ margin-top: 50px;
+}
+
+.card{
+ height: 150px;
+ width: 150px;
+ border: 4px solid #3B82F6;
+ border-radius: 16px;
+ background-color: #fff;
+
+}
+
+.block{
+ text-align: center;
+ width: 150px;
+ background-color: #fff;
+}
+
+#text{
+ margin-top: 8px;
+ background-color: #fff;
 }
