HTML --> 2st section added

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 
-/* --------------- HEADER ------------------ */
+/* --------------- Section_1 ------------------ */
 .color-white{
  color: #fff;
 }
@@ -148,3 +148,6 @@ a{
  margin-top: 8px;
  background-color: #fff;
 }
+
+/* --------------- Section_2 ------------------ */
+
