--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,100&display=swap');
 
 
 /* --------------- Section_1 ------------------ */
@@ -151,3 +151,38 @@ a{
 
 /* --------------- Section_2 ------------------ */
 
+.section-2{
+ border: 5px solid blue;
+ background-color: #E5E7EB;
+ height:400px;
+ width: 1450px;
+ padding: 50px 180px 0px 180px;
+ box-sizing: border-box;
+ display: flex;
+ flex-direction: column;
+
+}
+
+.text-sec2{
+ font-style: italic;
+ font-size: 36px;
+ color: #1f2937;
+ background-color: #E5E7EB;
+}
+
+.bottom-text{
+ margin-right: 16px;
+ font-size: 26px;
+ background-color: #E5E7EB;
+ color: black;
+ font-weight: 500;
+}
+
+.content-sec2 {
+ width: 800px;
+ padding: 50px;
+ background-color: #E5E7EB;
+ display: flex;
+ flex-direction: column;
+ align-items: end;
+}
