HTML --> 3st section added

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body{
  font-family: 'Roboto', sans-serif;
  border: 3px solid red;
- height: 100vh;
+ height: 200vh;
  margin: 0;
  /* display: flex;
  flex-direction: column;
@@ -186,3 +186,6 @@ a{
  flex-direction: column;
  align-items: end;
 }
+
+/* --------------- Section_3 ------------------ */
+
