--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,200;300;400;0,500;0,700;0,900;1,100&display=swap');
 
 
 /* --------------- Section_1 ------------------ */
@@ -164,6 +164,7 @@ a{
 }
 
 .text-sec2{
+ font-weight: 300;
  font-style: italic;
  font-size: 36px;
  color: #1f2937;
@@ -189,3 +190,44 @@ a{
 
 /* --------------- Section_3 ------------------ */
 
+.section-3{
+ border: 5px solid green;
+ background-color: white;
+ height:400px;
+ width: 1450px;
+ box-sizing: border-box;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.blue-box{
+ background-color: #3B82F6;
+ height: 130px;
+ width: 1000px;
+ border-radius: 16px;
+ display: flex;
+ justify-content: space-around;
+ align-items: center;
+}
+.main-text, .sub-text{
+ background-color: #3B82F6;
+ color: #fff;
+}
+
+.main-text{
+ font-size: 24px;
+ font-weight: 500;
+}
+.sub-text{
+ font-size: 18px;
+ color: #CFDAEC;
+ font-weight: 300;
+}
+
+.lst{
+ background-color: #3B82F6;
+}
+
+.last-button{
+ border: 2px solid #fff;
+}
