--- a/style.css
+++ b/style.css
@@ -14,17 +14,17 @@
 }
 body{
  font-family: 'Roboto', sans-serif;
- border: 3px solid red;
+ /* border: 3px solid red; */
  height: 200vh;
  margin: 0;
- /* display: flex;
+ display: flex;
  flex-direction: column;
- flex: 1; */
- /* align-items: center; */
+ /* flex: 1; */
+ align-items: center;
 }
 
 .header{
- border: 5px solid blue;
+ /* border: 5px solid blue; */
  height: 550px;
  background-color: #1f2937;
  width: 1450px;
@@ -107,7 +107,7 @@ a{
  width: 1450px;
  /* padding: 16px 180px 16px 180px; */
  box-sizing: border-box;
- border: 5px solid green;
+ /* border: 5px solid green; */
  display: flex;
  flex-direction: column;
  align-items: center;
@@ -152,7 +152,7 @@ a{
 /* --------------- Section_2 ------------------ */
 
 .section-2{
- border: 5px solid blue;
+ /* border: 5px solid blue; */
  background-color: #E5E7EB;
  height:400px;
  width: 1450px;
@@ -191,7 +191,7 @@ a{
 /* --------------- Section_3 ------------------ */
 
 .section-3{
- border: 5px solid green;
+ /* border: 5px solid green; */
  background-color: white;
  height:400px;
  width: 1450px;
@@ -234,3 +234,13 @@ a{
 
 /* --------------- Footer ------------------ */
 
+.footer{
+ font-size: 18px;
+ color: #fff;
+ height: 100px;
+ width: 1450px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ box-sizing: border-box;
+}
