Finally Project Completed ❤️‍🔥

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
  width: 1450px;
  padding: 16px 180px 16px 180px;
  box-sizing: border-box;
+
 }
 
 .logo {
@@ -156,10 +157,12 @@ a{
  background-color: #E5E7EB;
  height:400px;
  width: 1450px;
- padding: 50px 180px 0px 180px;
+ /* padding: 50px 180px 0px 180px; */
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
+ justify-content: center;
+ align-items: center;
 
 }
 
